feat: support setting a target part/time/duration and clearing
